--- a/index.html
+++ b/index.html
@@ -206,13 +206,13 @@
                             <!-- End Portfolio Item -->
                             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books" style="position: absolute; left: 0px; top: 336px;">
                                 <div class="portfolio-content h-100">
-                                    <img src="assets/img/portfolio/books-1.jpg" class="img-fluid" alt="">
+                                    <img src="assets/img/portfolio/books-1.png" class="img-fluid" alt="">
                                     <div class="portfolio-info">
                                         <h4>Books 1</h4>
                                         <p>Lorem ipsum</p>
                                         <div>
                                             <a
-                                                href="assets/img/portfolio/books-1.jpg"
+                                                href="assets/img/portfolio/books-1.png"
                                                 title="Branding 1"
                                                 data-gallery="portfolio-gallery-book"
                                                 class="glightbox preview-link"
@@ -298,13 +298,13 @@
                             <!-- End Portfolio Item -->
                             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books" style="position: absolute; left: 440px; top: 672px;">
                                 <div class="portfolio-content h-100">
-                                    <img src="assets/img/portfolio/books-2.jpg" class="img-fluid" alt="">
+                                    <img src="assets/img/portfolio/books-2.png" class="img-fluid" alt="">
                                     <div class="portfolio-info">
                                         <h4>Books 2</h4>
                                         <p>Lorem ipsum</p>
                                         <div>
                                             <a
-                                                href="assets/img/portfolio/books-2.jpg"
+                                                href="assets/img/portfolio/books-2.png"
                                                 title="Branding 2"
                                                 data-gallery="portfolio-gallery-book"
                                                 class="glightbox preview-link"
@@ -390,13 +390,13 @@
                             <!-- End Portfolio Item -->
                             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books" style="position: absolute; left: 880px; top: 1008px;">
                                 <div class="portfolio-content h-100">
-                                    <img src="assets/img/portfolio/books-3.jpg" class="img-fluid" alt="">
+                                    <img src="assets/img/portfolio/books-3.png" class="img-fluid" alt="">
                                     <div class="portfolio-info">
                                         <h4>Books 3</h4>
                                         <p>Lorem ipsum</p>
                                         <div>
                                             <a
-                                                href="assets/img/portfolio/books-3.jpg"
+                                                href="assets/img/portfolio/books-3.png"
                                                 title="Branding 3"
                                                 data-gallery="portfolio-gallery-book"
                                                 class="glightbox preview-link"
